--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/build_rex_blitz.data.br",
-        frameworkUrl: "Build/build_rex_blitz.framework.js.br",
-        codeUrl: "Build/build_rex_blitz.wasm.br",
+        dataUrl: "Build/build_rex_blitz.data",
+        frameworkUrl: "Build/build_rex_blitz.framework.js",
+        codeUrl: "Build/build_rex_blitz.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Osk",
         productName: "REX BLITZ",
