--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Unity WebGL Player | REX BLITZ</title>
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
-    <canvas id="unity-canvas" width=360 height=640 style="width: 360px; height: 640px; background: #231F20"></canvas>
+    <canvas id="unity-canvas" width=360 height=640 tabindex="-1" style="width: 360px; height: 640px; background: #231F20"></canvas>
     <script src="Build/build_rex_blitz.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
