--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 
         const tg = window.Telegram.WebApp;
         const initDataUnsafe = tg.initDataUnsafe;
+        console.log("Telegram initDataUnsafe:", tg.initDataUnsafe);
 
         if (initDataUnsafe && initDataUnsafe.chat && initDataUnsafe.user) {
           const chatId = initDataUnsafe.chat.id.toString();
