--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
   </div>
   <script src="Build/build_rex_blitz.loader.js"></script> <!-- Ensure this path is correct -->
   <script>
-    window.Telegram = window.Telegram || {};
 
     var container = document.querySelector("#unity-container");
     var canvas = document.querySelector("#unity-canvas");
@@ -117,6 +116,8 @@
         // fullscreenButton.onclick = () => {
         //   unityInstance.SetFullscreen(1);
         // };
+        window.Telegram.WebApp.ready();
+
         function sendDataToUnity(gameObjectName, methodName, data) {
           if (typeof unityInstance !== 'undefined') {
             unityInstance.SendMessage(gameObjectName, methodName, data);
